-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.4.0 Beta4
Using QML Compiler with cross-compilation toolchain fails as qmlsc tries to find QML modules from runtime paths instead of using the sysroot paths.
Building for extending-qml/chapter6-plugins example with Boot2Qt toolchain:
[7/16 89.4/sec] Generating .rcc/qmlcache/chapter6-plugins_app_qml.cpp Warning: app.qml: Warnings occurred while importing base modules: [import] --- Warning: Failed to find the following builtins: builtins.qmltypes, jsroot.qmltypes (so will use qrc). Import paths used: /home/sapiippo/Qt/Examples/Qt-6.4.0/qml/tutorials/extending-qml/build-chapter6-plugins-Boot2Qt_6_4_0_Raspberry_Pi_4_64_bit-Debug /usr/lib/qml [import]