Add --bare option to qmltc and qmlcachegen

We need those to prevent usage of the host Qt's import path when
building QML files for the target.

Task-number: QTBUG-106365
Change-Id: I34499af850fb759603206cb429ff97633c76054d
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>
(cherry picked from commit 2f583eeab254edbb0e1b42213e9d48ce6ad3f04e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>